# aurore

./: .gitignore  README.md  package.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: brief.svelte.ts  config.svelte.ts  feed.svelte.ts  library.svelte.ts  reader.svelte.ts  reveal.ts  time.ts  types.ts  voice.svelte.ts
src/lib/components/: EmptyState.svelte  FeedCard.svelte  Logo.svelte  Mascot.svelte  PlayBriefButton.svelte  Reader.svelte  Settings.svelte  SourceChip.svelte  TitleBar.svelte  WeatherWidget.svelte
src/lib/components/brief/: Diaporama.svelte  SlideEmails.svelte  SlideGreeting.svelte  SlideNews.svelte  SlideNotifications.svelte  SlideOutro.svelte  SlideWeather.svelte
src/routes/: +page.svelte
src/routes/likes/: +page.svelte
